--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 				<version>0.13.0</version>
 			</dependency>
 			<dependency>
+				<groupId>org.locationtech.proj4j</groupId>
+				<artifactId>proj4j</artifactId>
+				<version>1.3.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.spockframework</groupId>
 				<artifactId>spock-core</artifactId>
 				<version>2.4-M1-groovy-4.0</version>
@@ -64,6 +69,11 @@
 		<dependency>
 			<groupId>io.github.ololx.moonshine</groupId>
 			<artifactId>moonshine-measuring</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.locationtech.proj4j</groupId>
+			<artifactId>proj4j</artifactId>
 		</dependency>
 
 		<dependency>
