--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 			</dependency>
 			<dependency>
 				<groupId>io.github.ololx.moonshine</groupId>
-				<artifactId>moonshine-measuring</artifactId>
+				<artifactId>moonshine-stopwatch</artifactId>
 				<version>0.13.0</version>
 			</dependency>
 			<dependency>
@@ -68,7 +68,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.github.ololx.moonshine</groupId>
-			<artifactId>moonshine-measuring</artifactId>
+			<artifactId>moonshine-stopwatch</artifactId>
 		</dependency>
 
 		<dependency>
